# src/api-spec/core-connector-api-spec.-sdk.yml
@@ -11,7 +11,7 @@ info:
         url: http://www.apache.org/licenses/
 
 paths:
-    /parties/IBAN/{ID}:
+    /parties/{idType}/{ID}:
         get:
             tags:
                 - Get Parties
@@ -20,6 +20,11 @@ paths:
             operationId: getParties
             parameters:
                 - name: ID
+                  in: path
+                  required: true
+                  schema:
+                      type: string
+                - name: idType
                   in: path
                   required: true
                   schema:
